# scratch-project-compiler

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
src/: compile.cpp  compile.hpp  main.cpp  strings.hpp  version.h.in
src/compiler/: ASTNode.cpp  ASTNode.hpp  BinaryOp.cpp  BinaryOp.hpp  BlockStatement.cpp  BlockStatement.hpp  Expression.cpp  Expression.hpp  FunctionArgument.cpp  FunctionArgument.hpp  FunctionBody.cpp  FunctionBody.hpp  FunctionDeclaration.cpp  FunctionDeclaration.hpp  FunctionExpression.cpp  FunctionExpression.hpp  IfStatement.cpp  IfStatement.hpp  Lexer.cpp  Lexer.hpp  LiteralNodes.cpp  LiteralNodes.hpp  NotOperator.cpp  NotOperator.hpp  Parser.cpp  Parser.hpp  ReturnStatement.cpp  ReturnStatement.hpp  StackPop.cpp  StackPop.hpp  StackTop.cpp  StackTop.hpp  Statement.cpp  Statement.hpp  StdcallExpression.hpp  StdcallHook.cpp  StdcallHook.hpp  StdcallStatement.cpp  StdcallStatement.hpp  VariableAssignment.cpp  (+7 more)
src/exceptions/: LanguageErrors.cpp  LanguageErrors.hpp
src/management/: config.hpp  project.cpp  project.hpp  sprites.cpp  sprites.hpp
src/utility/: file_utils.cpp  file_utils.hpp  md5.cpp  md5.hpp  pch.hpp
